# test

./: 1122  CMakeLists.txt
6582/: battery_common.h
6582/kerneldriverpower/: Makefile  battery_common.c  battery_meter.c  lenovo_charging.c  lenovo_charging.h  switch_charging.c
6582/kernelplat6582/: fan5405.c
6582/octopus/: .gitignore  Kconfig  Makefile  octopus.c  server.c  utils.c
6582/octopus/include/: hw_control.h  internal.h  octopus.h  rts_cam.h
6582/octopus/io/: Makefile  Makefile.bak  Makefile.bak.bak.bak  opt_io.c  rtsio.c  rtsio.c.bak  rtsio.h  testptz  testptz.c
6582/octopus/uvc/: Makefile  char_library.c  char_library.h  cli_uvc.c  cli_v4l2.c  example.c  isp.c  isp.h  reg_addr.h  rts_cam.c  rts_cam_utils.c  rts_uvc.h  svr_uvc.c  svr_uvc_utils.c  uvc_internal.h
